Added: > Bank Credentials > Back Button to All Invoices View > Completed Minimized Stay View
BugFix:
> Fixed Visibility of 'Check-Out' Button
> No empty selectedCategoryRoomsCount

Implemented:
> Finder Method 'findRoomsByStayId' for Room Numbers in Stay View

Tested:
> All Application Methods except for 'allStayInvoices'
> Infrastructure 'findRoomsByStayId'